fixup! refactor(Icon): add css var for vertical align

--- a/packages/components/src/Collapsible/Collapsible/Collapsible.module.scss
+++ b/packages/components/src/Collapsible/Collapsible/Collapsible.module.scss
@@ -80,10 +80,6 @@ $container-border-width: var(--border-width-1);
   background-color: transparent !important; /* stylelint-disable-line declaration-no-important */
 }
 
-.chevronIcon {
-  vertical-align: unset;
-}
-
 .title {
   flex: 1 1 auto;
 }
