--- a/packages/components/src/ErrorPage/ErrorPage.module.scss
+++ b/packages/components/src/ErrorPage/ErrorPage.module.scss
@@ -3,7 +3,3 @@
 .paragraphPadding {
   padding: $spacing-24 0;
 }
-
-.buttonIcon {
-  vertical-align: unset;
-}
