--- a/packages/components/src/Notification/subcomponents/NotificationIcon/NotificationIcon.module.css
+++ b/packages/components/src/Notification/subcomponents/NotificationIcon/NotificationIcon.module.css
@@ -1,4 +1,3 @@
 .notificationIcon {
   font-size: inherit;
-  vertical-align: unset;
 }
